# magic-project

./: .gitignore  Dockerfile  Dockerfile.test  enemyAi.c  enemyAi.h  init.c  init.h  magic.c  magic.h  main.c  map.txt  nameGenerator.c  nameGenerator.h  nextLevel.c  nextLevel.h  roguelike.cbp  roguelike.depend  roguelike.layout  stage.c  stage.h  store.c  store.h  vstavki.c
.github/workflows/: c-cpp.yml
magic-project/: CMakeLists.txt  README.md  enemyAi.c  enemyAi.h  init.h  magic  magic.h  nameGenerator.c  names.txt  nextLevel.h  stage.c  stage.h  test.cpp
magic-project/test/: CMakeLists.txt
